Explicitly list Gradle Daemon since we mention it in the onboarding doc

--- a/common-gradle-enterprise-gradle-configuration/gradle.properties
+++ b/common-gradle-enterprise-gradle-configuration/gradle.properties
@@ -1,5 +1,6 @@
 # enable these performance features unless you have specific reasons not to
 org.gradle.vfs.watch=true
+org.gradle.daemon=true
 org.gradle.caching=true
 org.gradle.parallel=true
 
