Try igorning a specific gradlew
Igorning them all doesn't seem to be working.

--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -12,4 +12,4 @@ jobs:
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
       with:
-        ignore: "**/gradlew"
+        ignore: "./common-gradle-enterprise-gradle-configuration/gradlew"
