Add the experiments/lib dir to the shellcheck exclude list
The scripts in the lib directory are included by other scripts. Shellcheck will
check the lib scripts when it processes the main scripts.

--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -16,6 +16,6 @@ jobs:
         SHELLCHECK_OPTS: -x
       with:
         sh_checker_comment: true
-        sh_checker_exclude: "gradlew mvnw"
+        sh_checker_exclude: "gradlew mvnw experiments/lib/"
         sh_checker_shfmt_disable: true
 
