Add sample project for webstart-maven-plugin

--- a/maven-build-caching-samples/pom.xml
+++ b/maven-build-caching-samples/pom.xml
@@ -14,10 +14,13 @@
     <module>pmd-project</module>
     <module>spotbugs-project</module>
     <module>antlr3-project</module>
+    <module>webstart-project</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
